@@ -20,6 +20,7 @@ apt (0.9.7.8) UNRELEASED; urgency=low
   * methods/https.cc:
     - reuse connection in https, thanks to Thomas Bushnell, BSG for the
       patch. LP: #1087543, Closes: #695359
+    - add missing curl_easy_cleanup()
 
  -- Christian Perrier <bubulle@debian.org>  Mon, 24 Dec 2012 07:01:20 +0100
 
